fix page alignment, arrow and header animation

--- a/src/App.css
+++ b/src/App.css
@@ -17,4 +17,7 @@ body{
 
 .page_content{
   margin-top: 10vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
