--- a/src/pages/about/stylesheets/about.module.sass
+++ b/src/pages/about/stylesheets/about.module.sass
@@ -4,7 +4,6 @@
   
 .outbox
   width: 100vw
-  height: 200vh
   display: flex
   flex-direction: column
   color: white
@@ -31,7 +30,9 @@
       margin-top: 20px
   .page_content
     width: 80%
+    height: 80%
     margin: auto
+    margin-top: 5%
     display: flex
     flex-direction: column
     align-items: cetner!important
@@ -93,7 +94,7 @@
   margin-bottom: 5%
 
 .column
-  height: 20%
+  height: 30%
 
 
 .tech_stack
@@ -142,7 +143,6 @@
 
 @media screen and (max-width: $mobileM)
   .page
-    height: 300vh
     .page_content
       margin-top: 20px
       margin-bottom: 20px
