--- a/src/pages/home/stylesheets/home.module.sass
+++ b/src/pages/home/stylesheets/home.module.sass
@@ -1,7 +1,6 @@
 @import '../../../modules/mediaQuery/app'
   
 .outbox
-  z-index: -1
   width: 100vw
   height: 100vh
   overflow: scroll
