--- a/src/pages/home/stylesheets/intro.module.sass
+++ b/src/pages/home/stylesheets/intro.module.sass
@@ -40,7 +40,6 @@
   .mail_link
     color: orange
 
-  .arrow
-    display: none
+  
 
 
