--- a/src/pages/projects/stylesheets/projects.module.sass
+++ b/src/pages/projects/stylesheets/projects.module.sass
@@ -4,7 +4,7 @@
 
 .outbox 
   width: 100vw
-  height: 180vh
+  // height: 180vh
   display: flex
   flex-direction: column
   overflow: hidden
@@ -27,7 +27,7 @@
   flex-direction: column
   align-items: center
   margin-top: 5%
-  // margin-bottom: 5%
+  margin-bottom: 5%
   .underline
     height: 3px
     width: 10%
@@ -58,7 +58,7 @@
   
 .row
   width: 95%
-  height: 40%
+  height: 40vh
   display: flex
   justify-content: space-between
   margin-bottom: 5%
@@ -83,7 +83,7 @@
   .navbar
     display: none  
   .row
-    height: 30%
+    height: 30vh
     .project
       width: 45%
     
@@ -91,7 +91,6 @@
 @media screen and (max-width: $mobileM)
   .outbox
     overflow: scroll
-    height: 200vh
   .page
     .arrow
       bottom: 10%
@@ -108,10 +107,10 @@
 
   .row
     width: 100%
-    height: 100%
+    height: 70vh
     display: flex
     flex-direction: column
-    justify-content: space-between
+    justify-content: space-around
     align-items: center
     .project 
       height: 30%
